--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     buildToolsVersion '28.0.3'
     defaultConfig {
-        applicationId "cn.thecover.www.cache"
+        applicationId "com.tone.cache"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
